# Airflow_Dagster_Comparison

./: .gitignore  README.md
airflow/: Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/: nyc_taxi_pipeline.py
dagster/: Dockerfile  dagster.yaml  definitions.py  docker-compose.yml  pyproject.toml
dagster/medallion/assets/: bronze.py  dbt_assets.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/bronze/: schema.yml  sources.yml  taxi_bronze.sql
dbt/models/gold/: schema.yml
dbt/models/silver/: taxi_silver.sql
